Gulp watch mplemented

--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -12,6 +12,7 @@
     "gulp-pug": "3.0.4",
     "gulp-sass": "2.3.2",
     "gulp-sourcemaps": "1.6.0",
+    "gulp-watch": "4.3.9",
     "rimraf": "2.5.4"
   },
   "scripts": {
