--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "none",
-  "dependencies": {},
+  "dependencies": {
+    "gulp-uglifycss": "1.0.6"
+  },
   "devDependencies": {
     "babel-preset-es2015": "6.13.2",
     "gulp": "3.9.1",
@@ -12,6 +14,7 @@
     "gulp-pug": "3.0.4",
     "gulp-sass": "2.3.2",
     "gulp-sourcemaps": "1.6.0",
+    "gulp-uglify": "2.0.0",
     "gulp-watch": "4.3.9",
     "rimraf": "2.5.4"
   },
