--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "marerial-skeleton",
   "version": "1.0.0",
-  "description": "",
+  "description": "Skeleton project for apps",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,6 +18,10 @@
   "homepage": "https://github.com/actuallymentor/material-skeleton#readme",
   "dependencies": {
     "body-parser": "1.15.2",
-    "express": "4.14.0"
+    "express": "4.14.0",
+    "express-session": "1.14.1",
+    "passport": "0.3.2",
+    "passport-local": "1.0.0",
+    "sequelize": "3.24.2"
   }
 }
