--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/actuallymentor/material-skeleton#readme",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "1.15.2",
     "express": "4.14.0",
     "express-session": "1.14.1",
