--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,7 @@
     "url": "git+ssh://git@github.com/actuallymentor/material-skeleton.git"
   },
   "author": "Mentor",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/actuallymentor/material-skeleton/issues"
   },
