--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -22,5 +22,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Mentor",
-  "license": "UNLICENCED"
+  "license": "MIT"
 }
