--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "1.15.2",
+    "cookie-parser": "1.4.3",
     "express": "4.14.0",
     "express-session": "1.14.1",
     "passport": "0.3.2",
