--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# Ignore environment vars
+.env
+
+# Annoying files
+.DS_Store
+
+# Frontend
+frontend/public
+frontend/src/styles/materialize.css
+
 # Logs
 logs
 *.log
@@ -35,8 +45,3 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
-
-.DS_STORE
-
-#Built files
-frontend/public
