--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "./node_modules/.bin/mocha --reporter spec",
-    "start": "nodemon app.js"
+    "start": "gulp clean; gulp build; nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -20,15 +20,36 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "1.15.2",
-    "chai": "3.5.0",
     "cookie-parser": "1.4.3",
+    "dotenv": "^2.0.0",
     "express": "4.14.0",
     "express-session": "1.14.1",
-    "mocha": "3.0.2",
+    "jquery": "^3.1.1",
     "passport": "0.3.2",
     "passport-local": "1.0.0",
     "pg": "6.1.0",
-    "request": "2.74.0",
     "sequelize": "3.24.2"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.16.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.1.0",
+    "chai": "^3.5.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-concat": "^2.6.0",
+    "gulp-pug": "^3.1.0",
+    "gulp-sass": "^2.3.2",
+    "gulp-sourcemaps": "^2.1.1",
+    "gulp-uglify": "^2.0.0",
+    "gulp-uglifycss": "^1.0.6",
+    "gulp-watch": "^4.3.10",
+    "materialize-css": "^0.97.7",
+    "mocha": "^3.1.2",
+    "request": "^2.75.0",
+    "rimraf": "^2.5.4",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0"
   }
 }
