--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "./node_modules/.bin/mocha --reporter spec",
-    "start": "gulp clean; gulp build; nodemon app.js",
-    "postinstall": "cp node_modules/materialize-css/js/date_picker/picker.js node_modules/materialize-css/bin"
+    "start": "gulp clean; gulp build; nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -25,7 +24,6 @@
     "dotenv": "^2.0.0",
     "express": "4.14.0",
     "express-session": "1.14.1",
-    "jquery": "^3.1.1",
     "passport": "0.3.2",
     "passport-local": "1.0.0",
     "pg": "6.1.0",
@@ -33,6 +31,7 @@
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
     "chai": "^3.5.0",
@@ -46,11 +45,14 @@
     "gulp-uglify": "^2.0.0",
     "gulp-uglifycss": "^1.0.6",
     "gulp-watch": "^4.3.10",
-    "materialize-css": "^0.97.7",
+    "jquery": "^3.1.1",
+    "material-ui": "^0.16.0",
     "mocha": "^3.1.2",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "react-tap-event-plugin": "^1.0.0",
     "request": "^2.75.0",
     "rimraf": "^2.5.4",
-    "velocity-animate": "^1.2.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
