--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
+    "browser-sync": "^2.17.5",
+    "browser-sync-webpack-plugin": "^1.1.3",
     "css-loader": "^0.25.0",
     "material-ui": "^0.16.0",
     "mocha": "^3.1.2",
