--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "sequelize": "3.24.2"
   },
   "devDependencies": {
+    "autoprefixer": "^6.5.2",
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.16.0",
@@ -39,6 +40,7 @@
     "css-loader": "^0.25.0",
     "mocha": "^3.1.2",
     "node-sass": "^3.10.1",
+    "postcss-loader": "^1.1.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "request": "^2.75.0",
