--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-preset-react": "^6.16.0",
     "browser-sync": "^2.17.5",
     "browser-sync-webpack-plugin": "^1.1.3",
+    "chai": "^3.5.0",
     "css-loader": "^0.25.0",
     "mocha": "^3.1.2",
     "node-sass": "^3.10.1",
