Used regular bcrypt instread of wrapper

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/actuallymentor/material-skeleton#readme",
   "dependencies": {
+    "bcrypt": "^0.8.7",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "1.15.2",
     "cookie-parser": "1.4.3",
