--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "passport": "0.3.2",
     "passport-local": "1.0.0",
     "pg": "6.1.0",
-    "sequelize": "3.24.2"
+    "sequelize": "3.24.2",
+    "supertest": "^2.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.5.2",
