--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,4 @@
-language: node_js
-node_js:
-  - "6"
-  - "5"
-services:
-  - postgresql
-before_script:
-  - psql -c 'create database travis_ci_test;' -U postgres
+sudo: false
 env:
   - port=8000
   - dbHost=localhost
@@ -30,3 +23,12 @@ addons:
     - ubuntu-toolchain-r-test
     packages:
     - g++-4.8
+    - gcc-4.8
+language: node_js
+node_js:
+  - "6"
+  - "5"
+services:
+  - postgresql
+before_script:
+  - psql -c 'create database travis_ci_test;' -U postgres
