--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-sudo: false
 env:
   - port=8000
   - dbHost=localhost
@@ -24,6 +23,7 @@ addons:
     packages:
     - g++-4.8
     - gcc-4.8
+    - libgnome-keyring-dev
 language: node_js
 node_js:
   - "6"
