--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,10 @@ node_js:
 services:
   - postgresql
 before_install:
-  - npm install -g node-gyp
+  - npm install -g node-gyp webpack
 before_script:
   - psql -c 'create database travis_ci_test;' -U postgres
+  - webpack --progress -p
 env:
   - port=8000
   - dbHost=localhost
