--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "mocha",
-    "start": "webpack --progress -d; nodemon app.js"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
