--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ sudo: required
 language: node_js
 node_js:
   - "7"
-  - "6"
 services:
   - postgresql
 before_install:
@@ -11,7 +10,7 @@ before_script:
   - psql -c 'create database travis_ci_test;' -U postgres
   - webpack --progress -p
 env:
-  - verbose=true
+  - verbose=true travis=true NODE_ENV=production
 addons:
   apt:
     sources:
