--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "css-loader": "^0.25.0",
     "mocha": "^3.1.2",
     "node-sass": "^3.10.1",
+    "nodemon": "^1.11.0",
     "postcss-loader": "^1.1.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
