--- a/package.json
+++ b/package.json
@@ -13,6 +13,17 @@
     "email": "mentor@palokaj.co",
     "url": "https://github.com/actuallymentor"
   },
+  "keywords": [
+    "node",
+    "express",
+    "sequelize",
+    "passport",
+    "react",
+    "babel",
+    "webpack",
+    "browsersync",
+    "sass"
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/actuallymentor/react-node-boilerplate/issues"
@@ -29,8 +40,7 @@
     "passport": "0.3.2",
     "passport-local": "1.0.0",
     "pg": "6.1.0",
-    "sequelize": "3.24.2",
-    "supertest": "^2.0.1"
+    "sequelize": "3.24.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.5.2",
@@ -48,9 +58,9 @@
     "postcss-loader": "^1.1.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "request": "^2.75.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
+    "supertest": "^2.0.1",
     "webpack": "^1.13.2"
   }
 }
